--- a/roles/install-sonar/tasks/main.yml
+++ b/roles/install-sonar/tasks/main.yml
@@ -69,5 +69,5 @@
   pause: seconds=180
   when: sonar_symlink.changed
 
-- name: Make sure Sonar is responding on the configured port.
-  wait_for: port=9007 delay=3 timeout=300
+#- name: Make sure Sonar is responding on the configured port.
+#  wait_for: port=9007 delay=3 timeout=300
